[package]
name = "solana_swapper"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bincode = "3.0.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-client = "3.1.8"
solana-sdk = "3.0.0"
tokio = { version = "1.49.0", features = ["full"] }