[package]
name = "solana_swapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
bincode = "1.3"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
solana-client = "2.2"
solana-sdk = "2.2"
tokio = { version = "1.49.0", features = ["full"] }
