[package]
name = "solana_swapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3.3"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rust_decimal = "1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
solana-client = "2.2"
solana-sdk = "2.2"
tokio = { version = "1", features = ["full"] }
